--- a/index.html
+++ b/index.html
@@ -4,56 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="portfolio.html">
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="portfolio.html" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
   <body class="body">
     <header>
       <nav>
-        <a href="index.html">WebStudio</a>
-        <ul>
-          <li class="buttonNav"><a class="buttonLinks" href="#">Estudio</a></li>
-          <li class="buttonNav"><a class="buttonLinks" href="portfolio.html">Portafolio</a></li>
-          <li class="buttonNav"><a class="buttonLinks" href="#">Contactos</a></li>
+        <a class="main_title" href="index.html">WebStudio</a>
+        <ul class="list_navigation">
+          <li class="button_nav"><a class="button_links current" href="index.html">Estudio</a></li>
+          <li class="button_nav"><a class="button_links" href="portfolio.html">Portafolio</a></li>
+          <li class="button_nav"><a class="button_links" href="#">Contactos</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
+      <ul class="list_contacts">
+        <li><a class="contacts_link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contacts_link" href="tel:+525555296000">+52 55 5529 6000</a></li>
       </ul>
     </header>
     <main>
-      <section class="classTitle">
-        <h1>SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-        <button type="button" class="buttonTitle">Solicite nuestro servicio</button>
+      <section class="title">
+        <h1 class="title_text">SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
+        <button type="button" class="button_title">Solicite nuestro servicio</button>
       </section>
       <section>
-        <ul>
+        <ul class="list_service">
           <li>
-            <h3>ATENCION A LOS DETALLES</h3>
-            <p>
+            <h3 class="service">ATENCION A LOS DETALLES</h3>
+            <p class="service_description">
               Nos adentramos en todos los detalles y procesos de su negocio, para asi desarrollar
               una solucion a su medida
             </p>
           </li>
           <li>
-            <h3>PUNTUALIDAD</h3>
-            <p>
+            <h3 class="service">PUNTUALIDAD</h3>
+            <p class="service_description">
               Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la
               empresa: respetar su tiempo y respetar los plazos acordados
             </p>
           </li>
           <li>
-            <h3>PLANIFICACION</h3>
-            <p>
+            <h3 class="service">PLANIFICACION</h3>
+            <p class="service_description">
               Usted podra observar y participar en cada fase del desarollo y aplicacion de las
               soluciones
             </p>
           </li>
           <li>
-            <h3>TECNOLOGIA MODERNA</h3>
-            <p>
+            <h3 class="service">TECNOLOGIA MODERNA</h3>
+            <p class="service_description">
               Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de
               simplificar los procesos laborales
             </p>
@@ -61,60 +61,94 @@
         </ul>
       </section>
       <section>
-        <h2 class="imagesTitle">A que nos dedicamos</h2>
-        <ul>
+        <h2 class="images_title">A que nos dedicamos</h2>
+        <ul class="list_images">
           <li>
-            <img src="./img/AQueNosDedicamos1.jpg" alt="Typing on a keyboard" width="373" />
-          </li>
-          <li>
-            <img src="./img/AQueNosDedicamos2.jpg" alt="Checking the phone" width="373" />
+            <img
+              class="images_what_we_do"
+              src="./img/AQueNosDedicamos1.jpg"
+              alt="Typing on a keyboard"
+            />
           </li>
           <li>
             <img
+              class="images_what_we_do"
+              src="./img/AQueNosDedicamos2.jpg"
+              alt="Checking the phone"
+            />
+          </li>
+          <li>
+            <img
+              class="images_what_we_do"
               src="./img/AQueNosDedicamos3.jpg"
               alt="Watching a color palette on an Ipad"
-              width="373"
             />
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Nuestro equipo</h2>
-        <ul>
+      <section class="team">
+        <h2 class="team_title">Nuestro equipo</h2>
+        <ul class="list_team">
           <li>
-            <img src="./img/NuestroEquipoAndres.jpg" alt="A man smiling" width="270" />
-            <h3>Andres Cubo</h3>
-            <p>Disenador de productos</p>
+            <img
+              class="team_image"
+              src="./img/NuestroEquipoAndres.jpg"
+              alt="A man smiling"
+              width="270"
+            />
+            <h3 class="team_name">Andres Cubo</h3>
+            <p class="team_job">Disenador de productos</p>
           </li>
           <li>
-            <img src="./img/NuestroEquipoCarla.jpg" alt="An armcrossed woman" width="270" />
-            <h3>Carla Palacio</h3>
-            <p>Desarolladora Frontend</p>
+            <img
+              class="team_image"
+              src="./img/NuestroEquipoCarla.jpg"
+              alt="An armcrossed woman"
+              width="270"
+            />
+            <h3 class="team_name">Carla Palacio</h3>
+            <p class="team_job">Desarolladora Frontend</p>
           </li>
           <li>
-            <img src="./img/NuestroEquipoMario.jpg" alt="A looking at his leftside" width="270" />
-            <h3>Mario Dorado</h3>
-            <p>Marketing</p>
+            <img
+              class="team_image"
+              src="./img/NuestroEquipoMario.jpg"
+              alt="A looking at his leftside"
+              width="270"
+            />
+            <h3 class="team_name">Mario Dorado</h3>
+            <p class="team_job">Marketing</p>
           </li>
           <li>
-            <img src="./img/NuestroEquipoPablo.jpg" alt="A man with a black T-shirt" width="270" />
-            <h3>Pablo Mijangos</h3>
-            <p>Disenador UI</p>
+            <img
+              class="team_image"
+              src="./img/NuestroEquipoPablo.jpg"
+              alt="A man with a black T-shirt"
+              width="270"
+            />
+            <h3 class="team_name">Pablo Mijangos</h3>
+            <p class="team_job">Disenador UI</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="#">WebStudio</a>
+    <footer class="footer">
+      <ul class="list_title">
+        <li><a class="main_title" href="#">WebStudio</a></li>
+      </ul>
       <address>
-        <ul>
+        <ul class="list_footer">
           <li>
-            <a href="enlace_google_maps" target="_blank" rel="noopener noreferrer nofollow"
-              >Calz. Ticomán 500, Ciudad de México, CDMX, México
-            </a>
+            <a
+              class="address_map"
+              href="enlace_google_maps"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >696 Park Ave, New York, NY 10065, United States</a
+            >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
+          <li><a class="contacts_link" href="mailto:info@example.com">info@example.com</a></li>
+          <li><a class="contacts_link" href="tel:+1212-772-4150">+1 212-772-41590</a></li>
         </ul>
       </address>
     </footer>
