3erd commit: correccion de errores

--- a/portfolio.html
+++ b/portfolio.html
@@ -131,12 +131,14 @@
       </ul>
       <address>
         <ul class="list_footer">
-          <li><a
+          <li>
+            <a
               class="address_map"
               href="enlace_google_maps"
               target="_blank"
               rel="noopener noreferrer nofollow"
-              >696 Park Ave, New York, NY 10065, United States</a>
+              >696 Park Ave, New York, NY 10065, United States</a
+            >
           </li>
           <li><a class="contacts_link" href="mailto:info@example.com">info@example.com</a></li>
           <li><a class="contacts_link" href="tel:+1212-772-4150">+1 212-772-41590</a></li>
