cambios actualizados de acuerdo a las recomendaciones. Falta solucionar el current.

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,23 +11,21 @@
   <body class="body">
     <header>
       <nav>
-        <a class="main_title" href="index.html">WebStudio</a>
-        <ul class="list_navigation">
-          <li class="button_nav"><a class="button_links" href="index.html">Estudio</a></li>
-          <li class="button_nav">
-            <a class="button_links current" href="portfolio.html">Portafolio</a>
-          </li>
-          <li class="button_nav"><a class="button_links" href="#">Contactos</a></li>
+        <a class="main_title decoration" href="index.html">WebStudio</a>
+        <ul class="list_navigation style">
+          <li class="button_nav decoration"><a class="button_links decoration" href="index.html">Estudio</a></li>
+          <li class="button_nav decoration"><a class="button_links decoration current" href="portfolio.html">Portafolio</a></li>
+          <li class="button_nav decoration"><a class="button_links decoration" href="#">Contactos</a></li>
         </ul>
       </nav>
-      <ul class="list_contacts">
-        <li><a class="contacts_link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contacts_link" href="tel:+525555296000">+52 55 5529 6000</a></li>
+      <ul class="list_contacts style">
+        <li><a class="contacts_link decoration" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contacts_link decoration" href="tel:+525555296000">+52 55 5529 6000</a></li>
       </ul>
     </header>
     <main>
       <section>
-        <ul class="list_options">
+        <ul class="list_options style">
           <li><button class="main_option" type="button">Todo</button></li>
           <li><button class="main_option" type="button">Sitios web</button></li>
           <li><button class="main_option" type="button">Aplicaciones</button></li>
@@ -36,7 +34,7 @@
         </ul>
       </section>
       <section>
-        <ul class="list_images">
+        <ul class="list_images style">
           <li>
             <img
               src="./img/Project1WebsiteTechnoduck.jpg"
@@ -126,22 +124,22 @@
       </section>
     </main>
     <footer class="footer">
-      <ul class="list_title">
-        <li><a class="main_title" href="#">WebStudio</a></li>
+      <ul class="list_title style">
+        <li><a class="main_title decoration" href="#">WebStudio</a></li>
       </ul>
       <address>
-        <ul class="list_footer">
+        <ul class="list_footer style">
           <li>
             <a
-              class="address_map"
+              class="address_map decoration"
               href="enlace_google_maps"
               target="_blank"
               rel="noopener noreferrer nofollow"
               >696 Park Ave, New York, NY 10065, United States</a
             >
           </li>
-          <li><a class="contacts_link" href="mailto:info@example.com">info@example.com</a></li>
-          <li><a class="contacts_link" href="tel:+1212-772-4150">+1 212-772-41590</a></li>
+          <li><a class="contacts_link decoration" href="mailto:info@example.com">info@example.com</a></li>
+          <li><a class="contacts_link decoration" href="tel:+1212-772-4150">+1 212-772-41590</a></li>
         </ul>
       </address>
     </footer>
