--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <body class="body">
     <header>
       <nav>
-        <a class="main_title" href="index.html">WebStudio</a>
-        <ul class="list_navigation">
-          <li class="button_nav"><a class="button_links current" href="index.html">Estudio</a></li>
-          <li class="button_nav"><a class="button_links" href="portfolio.html">Portafolio</a></li>
-          <li class="button_nav"><a class="button_links" href="#">Contactos</a></li>
+        <a class="main_title decoration" href="index.html">WebStudio</a>
+        <ul class="list_navigation style">
+          <li class="button_nav decoration"><a class="button_links decoration current" href="index.html">Estudio</a></li>
+          <li class="button_nav decoration"><a class="button_links decoration" href="portfolio.html">Portafolio</a></li>
+          <li class="button_nav decoration"><a class="button_links decoration" href="#">Contactos</a></li>
         </ul>
       </nav>
-      <ul class="list_contacts">
-        <li><a class="contacts_link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contacts_link" href="tel:+525555296000">+52 55 5529 6000</a></li>
+      <ul class="list_contacts style">
+        <li><a class="contacts_link decoration" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contacts_link decoration" href="tel:+525555296000">+52 55 5529 6000</a></li>
       </ul>
     </header>
     <main>
@@ -29,7 +29,7 @@
         <button type="button" class="button_title">Solicite nuestro servicio</button>
       </section>
       <section>
-        <ul class="list_service">
+        <ul class="list_service style">
           <li>
             <h3 class="service">ATENCION A LOS DETALLES</h3>
             <p class="service_description">
@@ -62,7 +62,7 @@
       </section>
       <section>
         <h2 class="images_title">A que nos dedicamos</h2>
-        <ul class="list_images">
+        <ul class="list_images style">
           <li>
             <img
               class="images_what_we_do"
@@ -88,7 +88,7 @@
       </section>
       <section class="team">
         <h2 class="team_title">Nuestro equipo</h2>
-        <ul class="list_team">
+        <ul class="list_team style">
           <li>
             <img
               class="team_image"
@@ -133,22 +133,22 @@
       </section>
     </main>
     <footer class="footer">
-      <ul class="list_title">
-        <li><a class="main_title" href="#">WebStudio</a></li>
+      <ul class="list_title style">
+        <li><a class="main_title decoration" href="#">WebStudio</a></li>
       </ul>
       <address>
-        <ul class="list_footer">
+        <ul class="list_footer style">
           <li>
             <a
-              class="address_map"
+              class="address_map decoration"
               href="enlace_google_maps"
               target="_blank"
               rel="noopener noreferrer nofollow"
               >696 Park Ave, New York, NY 10065, United States</a
             >
           </li>
-          <li><a class="contacts_link" href="mailto:info@example.com">info@example.com</a></li>
-          <li><a class="contacts_link" href="tel:+1212-772-4150">+1 212-772-41590</a></li>
+          <li><a class="contacts_link decoration" href="mailto:info@example.com">info@example.com</a></li>
+          <li><a class="contacts_link decoration" href="tel:+1212-772-4150">+1 212-772-41590</a></li>
         </ul>
       </address>
     </footer>
